--- a/events/card/edit.html
+++ b/events/card/edit.html
@@ -44,104 +44,103 @@
         </ul>
     	</nav>
     </heder>
-    <form class='confInfo' ng-controller='myController'>
+    <div id="content">
+      <form class='confInfo' ng-controller='myController'>
+      	<div class="row">
+      		<div class="col-md-12">
+      			<div class="col-lg-6 col-md-12 text-left">
+      				<div class="form-group">
+      					<label for="nameConf">Название конференции:</label>
+      					<input type="text" class="form-control" id="nameConf" maxlength="145">
+      				</div>
+      				<div class="form-group">
+      					<label for="shortDesc">Краткое описание:</label>
+      					<input type="text" class="form-control" id="shortDesc" maxlength="256">
+      				</div>
+      				<div class="form-group">
+      					<label for="description">Описание:</label>
+      					<textarea class="form-control" id="description" rows="7" maxlength="1000"></textarea>
+      				</div>
+      			</div>
+      			<div class="col-lg-6 col-md-12 text-left">
+      				<div class='form-group organization' id = "organization">
+      					<label for="orgSelect">Организатор</label>
+      					<select id="orgSelect" name="orgSelect" class="form-control org-select">
+      						<option>Не выбрано</option>
+      					</select>
+      					<img src="../../img/foto.png" id="orgLogo" alt="fotoOrg">
+      					<h4 id="urlOrg"></h4>
 
-    	<div class="row">
-    		<div class="col-md-12">
-    			<div class="col-lg-6 col-md-12 text-left">
-    				<div class="form-group">
-    					<label for="nameConf">Название конференции:</label>
-    					<input type="text" class="form-control" id="nameConf" maxlength="145">
-    				</div>
-    				<div class="form-group">
-    					<label for="shortDesc">Краткое описание:</label>
-    					<input type="text" class="form-control" id="shortDesc" maxlength="256">
-    				</div>
-    				<div class="form-group">
-    					<label for="description">Описание:</label>
-    					<textarea class="form-control" id="description" rows="7" maxlength="1000"></textarea>
-    				</div>
-    			</div>
-    			<div class="col-lg-6 col-md-12 text-left">
-    				<div class='form-group organization' id = "organization">
-    					<label for="orgSelect">Организатор</label>
-    					<select id="orgSelect" name="orgSelect" class="form-control org-select">
-    						<option>Не выбрано</option>
-    					</select>
-    					<img src="../../img/foto.png" id="orgLogo" alt="fotoOrg">
-    					<h4 id="urlOrg"></h4>
+      					<!--<input type='checkbox' id='employee' name=''>-->
+      					<!--<label>Только для работников</label>-->
 
-    					<!--<input type='checkbox' id='employee' name=''>-->
-    					<!--<label>Только для работников</label>-->
+      					<div class="cntr">
+      						<label for="employee" class="label-employee">
+      							<input  type="checkbox" id='employee' class="invisible">
+      							<div class="checkbox">
+      								<svg width="20px" height="20px" viewBox="0 0 20 20">
+      									<path d="M3,1 L17,1 L17,1 C18.1045695,1 19,1.8954305 19,3 L19,17 L19,17 C19,18.1045695 18.1045695,19 17,19 L3,19 L3,19 C1.8954305,19 1,18.1045695 1,17 L1,3 L1,3 C1,1.8954305 1.8954305,1 3,1 Z"></path>
+      									<polyline points="4 11 8 15 16 6"></polyline>
+      								</svg>
+      							</div>
+      							<span>Только для работников</span>
+      						</label>
+      					</div>
 
-    					<div class="cntr">
-    						<label for="employee" class="label-employee">
-    							<input  type="checkbox" id='employee' class="invisible">
-    							<div class="checkbox">
-    								<svg width="20px" height="20px" viewBox="0 0 20 20">
-    									<path d="M3,1 L17,1 L17,1 C18.1045695,1 19,1.8954305 19,3 L19,17 L19,17 C19,18.1045695 18.1045695,19 17,19 L3,19 L3,19 C1.8954305,19 1,18.1045695 1,17 L1,3 L1,3 C1,1.8954305 1.8954305,1 3,1 Z"></path>
-    									<polyline points="4 11 8 15 16 6"></polyline>
-    								</svg>
-    							</div>
-    							<span>Только для работников</span>
-    						</label>
-    					</div>
-
-    				</div>
-    			</div>
-    		</div>
-    		<div class="col-md-12">
-    			<div class="changeInfo col-lg-6 col-md-12 text-left">
-    				<div class='time'>
-    					<img id="confPhoto" src="../../img/conf.png">
-    					<input type="file" id="fileSend" >
-    					<div class="row">
-    						<div class="col-md-12">
-    							<div class="dateStart mt20 form-group">
-    								<h4>Начало коференции:</h4>
-    								<div class="col-lg-6 col-md-12">
-    									<label for="dateStart">Дата:</label>
-    									<input type="date" class="form-control" required id="dateStart">
-    								</div>
-    								<div class="col-lg-6 col-md-12">
-    									<label for="timeStart">Время:</label>
-    									<input type="time" class="form-control" required id="timeStart">
-    								</div>
-    							</div>
-    						</div>
-    						<div class="col-md-12">
-    							<div class="dateEnd mt20 form-group">
-    								<h4>Конец коференции:</h4>
-    								<div class="col-lg-6 col-md-12">
-    									<label for="dateEnd">Дата:</label>
-    									<input type="date" class="form-control" required id="dateEnd">
-    								</div>
-    								<div class="col-lg-6 col-md-12">
-    									<label for="timeEnd">Время:</label>
-    									<input type="time" class="form-control" required id="timeEnd">
-    								</div>
-    							</div>
-    						</div>
-    					</div>
-
-
-    				</div>
-    			</div>
-    			<div class="col-lg-6 col-md-12 text-left" id="container">
-    				<div class='address' id="subcontainer">
-
-    					<label>Адрес:</label>
-    					<div id="map"></div>
-    				</div>
-    			</div>
-    		</div>
-    		<div class="col-md-12 mar-btn">
-    			<button id='save' ng-click='saveForm()'>Сохранить</button>
-    		</div>
-    	</div>
+      				</div>
+      			</div>
+      		</div>
+      		<div class="col-md-12">
+      			<div class="changeInfo col-lg-6 col-md-12 text-left">
+      				<div class='time'>
+      					<img id="confPhoto" src="../../img/conf.png">
+      					<input type="file" id="fileSend" >
+      					<div class="row">
+      						<div class="col-md-12">
+      							<div class="dateStart mt20 form-group">
+      								<h4>Начало коференции:</h4>
+      								<div class="col-lg-6 col-md-12">
+      									<label for="dateStart">Дата:</label>
+      									<input type="date" class="form-control" required id="dateStart">
+      								</div>
+      								<div class="col-lg-6 col-md-12">
+      									<label for="timeStart">Время:</label>
+      									<input type="time" class="form-control" required id="timeStart">
+      								</div>
+      							</div>
+      						</div>
+      						<div class="col-md-12">
+      							<div class="dateEnd mt20 form-group">
+      								<h4>Конец коференции:</h4>
+      								<div class="col-lg-6 col-md-12">
+      									<label for="dateEnd">Дата:</label>
+      									<input type="date" class="form-control" required id="dateEnd">
+      								</div>
+      								<div class="col-lg-6 col-md-12">
+      									<label for="timeEnd">Время:</label>
+      									<input type="time" class="form-control" required id="timeEnd">
+      								</div>
+      							</div>
+      						</div>
+      					</div>
 
 
-    </form>
+      				</div>
+      			</div>
+      			<div class="col-lg-6 col-md-12 text-left" id="container">
+      				<div class='address' id="subcontainer">
+
+      					<label>Адрес:</label>
+      					<div id="map"></div>
+      				</div>
+      			</div>
+      		</div>
+      		<div class="col-md-12 mar-btn">
+      			<button id='save' ng-click='saveForm()'>Сохранить</button>
+      		</div>
+      	</div>
+      </form>
+    </div>
     <script src="http://code.jquery.com/jquery-1.9.0.js"> </script>
     <script src="../../js/date.js"> </script>
     <script src = "../../js/functions.js" type="text/javascript" ></script>
